Fix z-index of seperator so it doesnt mask over anything from toolbar

--- a/src/components/pipeline/pipeline.less
+++ b/src/components/pipeline/pipeline.less
@@ -14,7 +14,7 @@
     border-right: 2px solid rgba(0, 0, 0, 0.1);
     box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.1);
     height: 100%;
-    z-index: 500;
+    z-index: 1;
   }
 
   &-expanded-separator {
@@ -24,7 +24,7 @@
     border-right: 2px solid rgba(0, 0, 0, 0.1);
     box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.1);
     height: 100%;
-    z-index: 500;
+    z-index: 1;
   }
 
   &-fullscreen {
